.kubernetes/f19-dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: f19-dev
  labels:
    shared-gateway-access: "true"
