.kubernetes/f19-dev/file-storage.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: file-storage
  namespace: f19-dev
spec:
  serviceName: file-storage
  replicas: 1
  selector:
    matchLabels:
      app: file-storage
  template:
    metadata:
      labels:
        app: file-storage
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: file-storage
          image: ghcr.io/dawidbladek0831/file-storage:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12
          volumeMounts:
            - name: file-storage-storage
              mountPath: /data/fileStorageDirName
  volumeClaimTemplates:
    - metadata:
        name: file-storage-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
