.kubernetes/f19-dev/file-storage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-storage-service
  namespace: f19-dev
spec:
  selector:
    app: file-storage
  type: ClusterIP
  ports:
    - name: HTTP
      port: 80
      targetPort: 8080
