.kubernetes/f19-dev/front.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-nginx
  namespace: f19-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-nginx
  template:
    metadata:
      labels:
        app: front-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-html
              mountPath: /usr/share/nginx/html
            - name: config-json
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: static-html
          emptyDir: {}
        - name: config-json
          configMap:
            name: front-config
        - name: nginx-conf
          configMap:
            name: front-nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: f19-dev
spec:
  selector:
    app: front-nginx
  ports:
    - port: 80
      targetPort: 80
