.kubernetes/f19-dev/synthesizer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synthesizer
  namespace: f19-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synthesizer
  template:
    metadata:
      labels:
        app: synthesizer
    spec:
      containers:
        - name: synthesizer
          image: ghcr.io/dawidbladek0831/synthesizer:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12

---

apiVersion: v1
kind: Service
metadata:
  name: synthesizer-service
  namespace: f19-dev
spec:
  selector:
    app: synthesizer
  ports:
    - name: http
      port: 80
      targetPort: 8080
