.kubernetes/f19-dev/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: front-route
  namespace: f19-dev
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared
  hostnames:
    - "f19.dev.dawidbladek0831.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: front-service
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: f19-dev
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared
  hostnames:
    - "api.f19.dev.dawidbladek0831.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /synthesizer
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: synthesizer-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /file-storage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: file-storage-service
          port: 80
